--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -324,7 +324,7 @@
   box-shadow:  0 10px 50px rgba(0, 0, 0, 0.08);
   font-family: 'Segoe UI Regular';
   width: 95%;
-  font-size: 20px;
+  font-size: 16px;
   left: 52.5%;
   top: 10px;
   transform: translateX(-50%);
@@ -449,15 +449,15 @@
 
 .messageCardContainer{
   position: relative;
-  background-color: blue;
-  height: 10%;
+  /* background-color: blue; */
+  height: 13%;
 }
 
 .messageCardContainer .eventGroupChatCard{
   position:relative;
   width:80%;
+  height: 95%;
   top: 50%;
-  padding:10px;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   background: white;
@@ -467,20 +467,32 @@
   font-family: 'Segoe UI Regular';
 }
 
-.messageCardContainer .eventGroupChatCard .eventChatHeaderMiddle{
+.eventChatHeaderMiddle {
   font-family: "Segoe UI";
   font-weight: 400;
   position: relative;
-  vertical-align: middle;
   top: 50%;
-  transform: translateY(-50%);
+  left: 50%;
+  /* background-color: red; */
+  transform: translateX(-50%) translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 80%;
+  text-align: center;
 }
+
+.chatHeader{
+  color:#096dd9;
+  font-size: 15px;
+}
+
 
 
 .messageList{
   width: 100%;
-  height: 80%;
-  background-color: green;
+  height: 74%;
+  /* background-color: green; */
   overflow: auto;
   /* padding:10px; */
   padding-top: 20px;
@@ -565,20 +577,50 @@
 
 
 .eventMessageInputForm{
-  background-color: red;
-  height: 10%;
+  /* background-color: red; */
+  height: 13%;
+  position: relative;
+
+}
+
+.eventInputForm{
+  position: relative;
+  height: 100%;
+  top: 50%;
+  width: 95%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .eventChatInput {
+  position: relative;
+  height: 40%;
   background-color: #f5f5f5;
-  margin-top:10px;
   border-radius: 10px;
-  margin-left: 15px;
-  width:95%;
+  margin-bottom: 5px;
+  width:100%;
   font-size: 15px;
   padding:10px;
+
 }
 
+.eventInputButtons{
+  position:relative;
+  float: right;
+}
+
+.roundButton{
+  background-color: #0099FF;
+  color: white;
+  height: 30px;
+  width: 80px;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 3px;
+  /* border: 1px grey solid; */
+  position: relative;
+  cursor: pointer;
+}
 
 .chatDisabledPage{
   background-color: whitesmoke;
@@ -808,12 +850,7 @@
   line-height: 100%;
 }
 
-.chatHeader{
-  margin-left: 150px;
-  color:#096dd9;
-  font-size: 15px;
-  margin-top:-25px;
-}
+
 
 
 .eventGroupChat{
@@ -830,16 +867,6 @@
 
 
 
-
-
-
-
-
-
-
-.roundButton{
-  border-radius: 10px;
-}
 
 .selectBox{
    white-space: nowrap;
