--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -111,6 +111,16 @@
   transform: translateX(-50%);
 }
 
+.calendarEventBadge{
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: #f5222d;
+  top: -4px;
+  right: -2%;
+}
+
 
 .miniCalendar {
   /* background-color: red; */
@@ -1095,6 +1105,7 @@ controls all colors and font weight */
 
 /* cell of the week */
 .weekEvent{
+  position: relative;
   color: white;
   /* padding-top: 2px; */
   /* margin-bottom: 100px; */
